fix: update heading sizes and adjust gap in project list component

--- a/app/app.css
+++ b/app/app.css
@@ -40,11 +40,11 @@ h6 {
 }
 
 h1 {
-  @apply text-3xl md:text-6xl;
+  @apply text-4xl md:text-6xl;
 }
 
 h2 {
-  @apply text-xl md:text-4xl;
+  @apply text-2xl md:text-4xl;
 }
 
 h3 {
@@ -55,7 +55,8 @@ h4 {
   @apply text-base md:text-xl;
 }
 
-p, ul {
+p,
+ul {
   @apply text-sm font-light md:text-base;
 }
 
